Tiny README changes.

--- a/README.ipynb
+++ b/README.ipynb
@@ -32,7 +32,7 @@
     "        - [bold()](#bold) -- Bold output using Unicode mathematical bold\n",
     "        - [cut_above()](#cut_above) -- Add a \"cut above this line\" line to the output\n",
     "        - [cut_below()](#cut_below) -- Add a \"cut below this line\" line to the output\n",
-    "        - [fullwidth()](#fullwidth) -- Write text in Unicode fullwidth (alternate monospa\n",
+    "        - [fullwidth()](#fullwidth) -- Write text in Unicode fullwidth (alternate monospace)\n",
     "        - [monospace()](#monospace) -- Write text in Unicode fake monospace\n",
     "        - [with_char_count()](#with_char_count) -- Return failure message if a string is > 280 characters long\n",
     "        - [with_cut_lines()](#with_cut_lines) -- Wrap output in cut_below() and cut_above()\n",
@@ -887,14 +887,12 @@
     "- Maybe an italic font as well, though that seems less useful. Also maybe some variables bound to generally useful Unicode characters (smileys, Harvey balls, etc)\n",
     "- Tweet threads? Could it be done? *Should* it be done? Well, yes and no, of course...\n",
     "- Instead of telling people to have labels all the same length (eg. horizontal dot chart) just pad to max(len(...))\n",
-    "- Basically, I'm not going to release this until the horizontal bar chart at least is done, as that's the most important one... possibly the vertical bar chart as well.\n",
     "- Better examples. Better... or at least funnier.\n",
     "\n",
     "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions. More or less in descending order of priority.\n",
     "\n",
     "- bullet diagram\n",
     "- stem and leaf \n",
-    "- horiz barchart\n",
     "- heatmap\n",
     "- boxplot\n",
     "- stacked bar\n",
