Some README thing or other

--- a/README.ipynb
+++ b/README.ipynb
@@ -323,12 +323,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Example"
+    "##### Example\n",
+    "\n",
+    "Basic bar chart. Bars will be scaled. The resolution is 1/8th of a character width."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -358,6 +360,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Example\n",
+    "\n",
+    "If you omit the second, `labels` argument, `lit.DEFAULT_LABELS` will be used. You can also pass an explicit `max_line_length` argument to change the length of the longest line including label and the values printed at the end of each line. Default is currently 20.\n",
+    "\n",
+    "If `print_values` is `False` then it will suppress those values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ａ█▌0.23\n",
+      "Ｂ████████▊1.4\n",
+      "Ｃ█▉0.3\n",
+      "Ｄ█████████████████████████4\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "Ａ█████\n",
+      "Ｂ██████████\n",
+      "Ｃ███████████████\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "𝐔𝐒 𝐂𝐨𝐯𝐢𝐝 𝟏𝟗 𝐃𝐞𝐚𝐭𝐡𝐬 𝐛𝐲 𝐌𝐨𝐧𝐭𝐡, 𝐉𝐮𝐥-𝐃𝐞𝐜 𝟐𝟎𝟐𝟎\n",
+      "\n",
+      "Ｊｕｌ█████▏24863\n",
+      "Ａｕｇ██████▎30239\n",
+      "Ｓｅｐ████▉23336\n",
+      "Ｏｃｔ████▉23578\n",
+      "Ｎｏｖ███████▋36596\n",
+      "Ｄｅｃ████████████57638\n",
+      "\n",
+      "Source: https://bit.ly/3eYNVYw\n",
+      "--------------------\n",
+      "\n",
+      "𝐂𝐎𝐌𝐏𝐎𝐒𝐈𝐓𝐈𝐎𝐍 𝐎𝐅 𝐓𝐇𝐄 𝐌𝐎𝐎𝐍 % 𝐓𝐀𝐊𝐄𝐍 𝐅𝐑𝐎𝐌 𝐋𝐔𝐍𝐀𝐑 𝐒𝐎𝐈𝐋\n",
+      "\n",
+      "　Ｏ████████████████42\n",
+      "Ｓｉ████████21\n",
+      "Ｆｅ█████13\n",
+      "Ｃａ███8\n",
+      "Ａｌ██▋7\n",
+      "Ｍｇ██▎6\n",
+      "　Ｘ█▏3\n",
+      "\n",
+      "X=Other; source: my son's t-shirt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.hbar_chart as hbar\n",
+    "import piltdown.util as util\n",
+    "\n",
+    "print(hbar.hbar([0.23,1.4,0.3,4], max_line_len=30))\n",
+    "print(\"-\" * 20 + \"\\n\")\n",
+    "print(hbar.hbar([1000,2000,3000],print_values=False))\n",
+    "print(\"-\" * 20 + \"\\n\")\n",
+    "print(util.bold(\"US Covid 19 Deaths by Month, Jul-Dec 2020\") + \"\\n\\n\" +\n",
+    "      hbar.hbar([24863,30239,23336,23578,36596,57638],\n",
+    "                [\"Jul\",\"Aug\",\"Sep\",\"Oct\",\"Nov\",\"Dec\"]) +\n",
+    "      \"\\nSource: https://bit.ly/3eYNVYw\")\n",
+    "print(\"-\" * 20 + \"\\n\")\n",
+    "print(util.bold(\"COMPOSITION OF THE MOON % TAKEN FROM LUNAR SOIL\") + \"\\n\\n\" +\n",
+    "      hbar.hbar([42,21,13,8,7,6,3],[\"O\",\"Si\",\"Fe\",\"Ca\",\"Al\",\"Mg\",\"X\"]) +\n",
+    "      \"\\nX=Other; source: my son's t-shirt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Horizontal Dot Charts\n",
     "\n",
     "Not to be confused with a dot plot.\n",
@@ -372,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
