--- a/README.ipynb
+++ b/README.ipynb
@@ -4,16 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Piltdown\n",
-    "[![Generic badge](https://img.shields.io/badge/Works-Kinda-<COLOR>.svg)](https://shields.io/)\n",
     "<img src=\"Piltdown_man.jpg\" width=\"100px\" align=\"right\" alt=\"Piltdown Man\"/>\n",
     "\n",
+    "# Piltdown\n",
+    "[![Generic badge](https://img.shields.io/badge/Works-Kinda-<COLOR>.svg)](https://shields.io/)\n",
+    "\n",
+    "\n",
     "*\"Data visualiation for your tweets... making your mindless propaganda look more scientific since 2021!\"*\n",
+    "\n",
     "\n",
     "**YE OLDE TABLE OF CONTENTS**\n",
     "\n",
     "- [Introduction](#introduction) *Wherein is answered the question of what it is and what it's for*\n",
     "    - [Caveats](#caveats)\n",
+    "    - [Obligatory Screenshot](#obligatory-screenshot)\n",
     "    - [The Basic Idea](#the-basic-idea)\n",
     "- [Installation](#installation) *Wherein is answered the question of how to get it*\n",
     "- [Documentation by Example](#documentation-by-example) *Wherein is answered the question of how to make it go go go!*\n",
@@ -75,6 +79,15 @@
     "\n",
     "I wrote this for the fun of it,\n",
     "on a lark. Don't get all testy with me."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obligatory Screenshot\n",
+    "\n",
+    "<img src=\"screenshot.png\" width=\"300px\" alt=\"screenshot\"/>"
    ]
   },
   {
