--- a/README.ipynb
+++ b/README.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "### Obligatory Screenshot\n",
     "\n",
-    "<img src=\"screenshot.png\" width=\"300px\" alt=\"screenshot\"/>"
+    "<img src=\"screenshot.jpg\" width=\"300px\" alt=\"screenshot\"/>"
    ]
   },
   {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -433,14 +433,20 @@
     "import piltdown.util as util\n",
     "\n",
     "print(hbar.hbar([0.23,1.4,0.3,4], max_line_len=30))\n",
+    "\n",
     "print(\"-\" * 20 + \"\\n\")\n",
+    "\n",
     "print(hbar.hbar([1000,2000,3000],print_values=False))\n",
+    "\n",
     "print(\"-\" * 20 + \"\\n\")\n",
+    "\n",
     "print(util.bold(\"US Covid 19 Deaths by Month, Jul-Dec 2020\") + \"\\n\\n\" +\n",
     "      hbar.hbar([24863,30239,23336,23578,36596,57638],\n",
     "                [\"Jul\",\"Aug\",\"Sep\",\"Oct\",\"Nov\",\"Dec\"]) +\n",
     "      \"\\nSource: https://bit.ly/3eYNVYw\")\n",
+    "\n",
     "print(\"-\" * 20 + \"\\n\")\n",
+    "\n",
     "print(util.bold(\"COMPOSITION OF THE MOON % TAKEN FROM LUNAR SOIL\") + \"\\n\\n\" +\n",
     "      hbar.hbar([42,21,13,8,7,6,3],[\"O\",\"Si\",\"Fe\",\"Ca\",\"Al\",\"Mg\",\"X\"]) +\n",
     "      \"\\nX=Other; source: my son's t-shirt\")"
@@ -589,7 +595,7 @@
    "source": [
     "#### Tables\n",
     "\n",
-    "Very small tables can be done using the util.to_monospace trick. Little two-way contingency tables might be done, for example."
+    "Very small tables can be done using the `util.fullwidth` trick (see under Utilites below). Little two-way contingency tables might be done, for example."
    ]
   },
   {
