Add completely legitimate testimonials.

--- a/README.ipynb
+++ b/README.ipynb
@@ -13,11 +13,19 @@
     "*\"Data visualiation for your tweets... making your mindless propaganda look more scientific since 2021!\"*\n",
     "\n",
     "\n",
+    "> *\"We increased our conversion rate 549% with Piltdown!\"* -- Joe Blip, Fake Testimonials 'Я' Us\n",
+    "\n",
+    "\n",
+    "> *\"Piltdown cured my son's cancer!\"* --Not the same guy as previous testimonial\n",
+    "\n",
+    "**OBLIGATORY SCREENSHOT**\n",
+    "\n",
+    "<img src=\"screenshot.jpg\" width=\"300px\" alt=\"screenshot\"/>\n",
+    "\n",
     "**YE OLDE TABLE OF CONTENTS**\n",
     "\n",
     "- [Introduction](#introduction) *Wherein is answered the question of what it is and what it's for*\n",
     "    - [Caveats](#caveats)\n",
-    "    - [Obligatory Screenshot](#obligatory-screenshot)\n",
     "    - [The Basic Idea](#the-basic-idea)\n",
     "- [Installation](#installation) *Wherein is answered the question of how to get it*\n",
     "- [Documentation by Example](#documentation-by-example) *Wherein is answered the question of how to make it go go go!*\n",
@@ -79,15 +87,6 @@
     "\n",
     "I wrote this for the fun of it,\n",
     "on a lark. Don't get all testy with me."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Obligatory Screenshot\n",
-    "\n",
-    "<img src=\"screenshot.jpg\" width=\"300px\" alt=\"screenshot\"/>"
    ]
   },
   {
