--- a/README.ipynb
+++ b/README.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -741,11 +741,11 @@
    "source": [
     "#### Waffle Charts\n",
     "\n",
-    "Just at the moment you can select your own glyphs (or use the defaults, `literals.WAFFLES`) and that's about it. \n",
+    "Just at the moment you can select your own glyphs, or use `literals.WAFFLES_COLOR` (the default) or `literals.WAFFLES_GRAYSCALE`, and that's about it. \n",
     "\n",
     "**Note** that I think these glyphs are being counted as two characters each, so that means a 10x10 waffle would cound as 210 characters on your limit (including the 10 newline characters). So... be knowing of that.\n",
     "\n",
-    "**Alzo note** The moiré effect of these glyphs is obviously pretty terrible. If you can find a better set for the defaults, please let me know.\n",
+    "**Alzo note** The moiré effect of the grayscale glyphs is pretty terrible. Use the color ones if you can, or roll your own.\n",
     "\n",
     "Waffles fill from top to bottom, first left-to-right, then right-to-left in alternating lines. I intend to write something that will let you fill from top to bottom, but writing the routine that rotates ragged two-dimensional lists is, you know, a job for a real programmer.\n",
     "\n",
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -769,18 +769,18 @@
      "output_type": "stream",
      "text": [
       "Pets Owned by Aliens by %\n",
-      "▩▩▩▩▩▩▩▩▩▩\n",
-      "▩▩▩▩▩▩▥▥▥▥\n",
-      "▥▥▥▥▥▥▥▥▥▥\n",
-      "▥▥▥▥▥▥▥▥▥▥\n",
-      "▥▥▥▥▥▥▥▥▥▥\n",
-      "▥▥▥▥▥▥▥▥▥▥\n",
-      "▥▥▥▥▥▥▥▥▥▥\n",
-      "▥▥▥▥▥▥▥▥▥▥\n",
-      "▦▦▦▦▦▦▦▦▥▥\n",
-      "▦▦▦▦▦▦▦▦▦▦\n",
+      "🟥🟥🟥🟥🟥🟥🟥🟥🟥🟥\n",
+      "🟥🟥🟥🟥🟥🟥🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟨🟨🟨🟨🟨🟨🟨🟨🟦🟦\n",
+      "🟨🟨🟨🟨🟨🟨🟨🟨🟨🟨\n",
       "\n",
-      "▩ = Babel Fish; ▥ = Tribble; ▦ = Wookie\n",
+      "🟥 = Babel Fish; 🟦 = Tribble; 🟨 = Wookie\n",
       "\n"
      ]
     }
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -981,8 +981,6 @@
     "\n",
     "#### TODO\n",
     "\n",
-    "- Maybe an italic font as well, though that seems less useful. Also maybe some variables bound to generally useful Unicode characters (smileys, Harvey balls, etc)\n",
-    "- Tweet threads? Could it be done? *Should* it be done? Well, yes and no, of course...\n",
     "- Instead of telling people to have labels all the same length (eg. horizontal dot chart) just pad to max(len(...))\n",
     "- Better examples. Better... or at least funnier.\n",
     "\n",
@@ -1032,7 +1030,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1046,7 +1044,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
