Dot matrix plot

--- a/README.ipynb
+++ b/README.ipynb
@@ -33,6 +33,7 @@
     "        - [Column Sparklines](#column-sparklines)\n",
     "        - [Comparison Charts](#comparison-charts)\n",
     "        - [Dot Charts](#dot-charts)\n",
+    "        - [Dot Matrix Plots](#dot-matrix-plots)\n",
     "        - [Horizontal Bar Charts](#horizontal-bar-charts)\n",
     "        - [Horizontal Dot Charts](#horizontal-dot-charts)\n",
     "        - [Scaled-Up Numbers](#scaled-up-numbers)\n",
@@ -48,7 +49,7 @@
     "        - [monospace()](#monospace) -- Write text in Unicode fake monospace\n",
     "        - [with_char_count()](#with_char_count) -- Return failure message if a string is > 280 characters long\n",
     "        - [with_cut_lines()](#with_cut_lines) -- Wrap output in cut_below() and cut_above()\n",
-    "         - [Misc_Unicode_thingies](#Misc_Unicode_thingies) -- Harvey balls, bullet points, and a few other things\n",
+    "        - [Misc_Unicode_thingies](#Misc_Unicode_thingies) -- Harvey balls, bullet points, and a few other things\n",
     "- [Hacking](#hacking) *Wherein is -- oh, this is getting boring*\n",
     "    - [Project Goals](#project-goals)\n",
     "    - [Todo](#todo)\n",
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -329,6 +330,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Dot Matrix Plot\n",
+    "\n",
+    "See [Waffle Charts](#waffle-charts)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Horizontal Bar Charts"
    ]
   },
@@ -343,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -742,11 +752,13 @@
    "source": [
     "#### Waffle Charts\n",
     "\n",
-    "Just at the moment you can select your own glyphs, or use `literals.WAFFLES_COLOR` (the default) or `literals.WAFFLES_GRAYSCALE`, and that's about it. \n",
+    "Just at the moment you can select your own glyphs, or use `literals.WAFFLES_COLOR` (the default) or `literals.WAFFLES_GRAYSCALE`, or roll your own.\n",
     "\n",
     "**Note** that I think these glyphs are being counted as two characters each, so that means a 10x10 waffle would cound as 210 characters on your limit (including the 10 newline characters). So... be knowing of that.\n",
     "\n",
     "**Alzo note** The moiré effect of the grayscale glyphs is pretty terrible. Use the color ones if you can, or roll your own.\n",
+    "\n",
+    "**Alzo alzo note** The `layout` argument is a tuple of two integers: preffered (width,height). Zero means calculate based on the other value. Two zeros (the default) means try to get as close to a square as possible.\n",
     "\n",
     "Waffles fill from top to bottom, first left-to-right, then right-to-left in alternating lines. I intend to write something that will let you fill from top to bottom, but writing the routine that rotates ragged two-dimensional lists is, you know, a job for a real programmer.\n",
     "\n",
@@ -762,27 +774,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pets Owned by Aliens by %\n",
-      "🟥🟥🟥🟥🟥🟥🟥🟥🟥🟥\n",
-      "🟥🟥🟥🟥🟥🟥🟦🟦🟦🟦\n",
-      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
-      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
-      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
-      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
-      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
-      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
-      "🟨🟨🟨🟨🟨🟨🟨🟨🟦🟦\n",
-      "🟨🟨🟨🟨🟨🟨🟨🟨🟨🟨\n",
-      "\n",
-      "🟥 = Babel Fish; 🟦 = Tribble; 🟨 = Wookie\n",
-      "\n"
+     "ename": "ValueError",
+     "evalue": "Layout not consistent with data length",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpiltdown\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwaffle\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mwfl\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Completely real data.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPets Owned by Aliens by \u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \n\u001b[1;32m----> 5\u001b[0m       \u001b[43mwfl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaffle\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m16\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m66\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m18\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mBabel Fish\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTribble\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mWookie\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m      )\n",
+      "File \u001b[1;32m~\\h\\piltdown\\piltdown\\waffle.py:39\u001b[0m, in \u001b[0;36mwaffle\u001b[1;34m(data, categories, glyphs, layout, ltor)\u001b[0m\n\u001b[0;32m     34\u001b[0m     layout[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m layout[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m     36\u001b[0m     layout[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m layout[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(data) \u001b[38;5;241m+\u001b[39m layout[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m layout[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;129;01mor\u001b[39;00m layout[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m layout[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(data) \u001b[38;5;241m-\u001b[39m layout[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m-\u001b[39m layout[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     38\u001b[0m ):\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLayout not consistent with data length\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# Get glyphs as a bare string.\u001b[39;00m\n\u001b[0;32m     41\u001b[0m chars \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mValueError\u001b[0m: Layout not consistent with data length"
      ]
     }
    ],
@@ -792,6 +796,33 @@
     "# Completely real data.\n",
     "print(\"Pets Owned by Aliens by %\\n\" + \n",
     "      wfl.waffle([16, 66, 18], [\"Babel Fish\", \"Tribble\", \"Wookie\"])\n",
+    "     )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example\n",
+    "\n",
+    "You can do \"dot matrix plots\" as well, using the `literals.DOTMATRIX`.\n",
+    "Let's get real. It's basically just another kind of Waffle chart.\n",
+    "\n",
+    "Observe that the routine that tries to make the result into a rectangle can only do so much if you give it oddly-lengthed data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import piltdown.waffle as wfl\n",
+    "import piltdown.literals as lit\n",
+    "\n",
+    "# Completely real data.\n",
+    "print(\"Proportion of different colored dots in the below self-referential plot:\\n\" + \n",
+    "      wfl.waffle([13, 23, 18, 3], [\"First color\", \"Second \", \"Third\", \"Fourth\"], glyphs = lit.DOTMATRIX)\n",
     "     )"
    ]
   },
@@ -824,17 +855,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is a 𝐯𝐞𝐫𝐲 \"𝐢𝐦𝐩𝐨𝐫𝐭𝐚𝐧𝐭\" 𝐭𝐡𝐢𝐧𝐠 𝐭𝐨 𝐬𝐚𝐲!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import piltdown.util as util\n",
     "\n",
@@ -859,17 +882,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ｗｉｔｔｙ　ｅｘａｍｐｌｅ　ｔｅｘｔ．\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import piltdown.util as util\n",
     "\n",
@@ -894,17 +909,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "𝙵𝚘𝚘𝚋𝚊𝚛\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import piltdown.util as util\n",
     "\n",
@@ -935,18 +942,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is short enough to be a tweet!\n",
-      "String too long to post on Twitter\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import piltdown.util as util\n",
     "\n",
@@ -997,21 +995,7 @@
     "- boxplot\n",
     "- stacked bar\n",
     "- grouped barchart\n",
-    "- lollypop chart\n",
-    "- pictorial unit -- basically allow custom characters for the dot chart, one per line\n",
-    "\n",
-    "Maybe look at later.\n",
-    "- treemap\n",
-    "- funnel\n",
-    "- linear process diagram\n",
-    "- nested/layered proportional area \n",
-    "- pyramid diagram\n",
-    "- dumbell plot\n",
-    "- partition layer chart icicle diag\n",
-    "- stepped line graph\n",
-    "- kagi chart\n",
-    "- dot matix\n",
-    "\n"
+    "- pictorial unit -- basically allow custom characters for the dot chart, one per line"
    ]
   },
   {
@@ -1049,7 +1033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
