Fix mindless mutable default args problem.

--- a/README.ipynb
+++ b/README.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
     "\n",
     "**Alzo note** The moiré effect of the grayscale glyphs is pretty terrible. Use the color ones if you can, or roll your own.\n",
     "\n",
-    "**Alzo alzo note** The `layout` argument is a tuple of two integers: preffered (width,height). Zero means calculate based on the other value. Two zeros (the default) means try to get as close to a square as possible.\n",
+    "**Alzo alzo note** The `layout` argument is a tuple of two integers: preffered `[width,height]`. Zero means calculate based on the other value. Two zeros (the default) means try to get as close to a square as possible.\n",
     "\n",
     "Waffles fill from top to bottom, first left-to-right, then right-to-left in alternating lines. I intend to write something that will let you fill from top to bottom, but writing the routine that rotates ragged two-dimensional lists is, you know, a job for a real programmer.\n",
     "\n",
@@ -774,19 +774,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Layout not consistent with data length",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpiltdown\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwaffle\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mwfl\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Completely real data.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPets Owned by Aliens by \u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \n\u001b[1;32m----> 5\u001b[0m       \u001b[43mwfl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaffle\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m16\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m66\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m18\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mBabel Fish\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTribble\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mWookie\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m      )\n",
-      "File \u001b[1;32m~\\h\\piltdown\\piltdown\\waffle.py:39\u001b[0m, in \u001b[0;36mwaffle\u001b[1;34m(data, categories, glyphs, layout, ltor)\u001b[0m\n\u001b[0;32m     34\u001b[0m     layout[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m layout[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m     36\u001b[0m     layout[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m layout[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(data) \u001b[38;5;241m+\u001b[39m layout[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m layout[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;129;01mor\u001b[39;00m layout[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m layout[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(data) \u001b[38;5;241m-\u001b[39m layout[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m-\u001b[39m layout[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     38\u001b[0m ):\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLayout not consistent with data length\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# Get glyphs as a bare string.\u001b[39;00m\n\u001b[0;32m     41\u001b[0m chars \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;31mValueError\u001b[0m: Layout not consistent with data length"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pets Owned by Aliens by %\n",
+      "🟥🟥🟥🟥🟥🟥🟥🟥🟥🟥\n",
+      "🟥🟥🟥🟥🟥🟥🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟦🟦🟦🟦🟦🟦🟦🟦🟦🟦\n",
+      "🟨🟨🟨🟨🟨🟨🟨🟨🟦🟦\n",
+      "🟨🟨🟨🟨🟨🟨🟨🟨🟨🟨\n",
+      "\n",
+      "🟥 = Babel Fish; 🟦 = Tribble; 🟨 = Wookie\n",
+      "\n"
      ]
     }
    ],
@@ -813,9 +821,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of different colored dots in the below self-referential plot:\n",
+      "🔴🔴🔴🔴🔴🔴🔴🔴\n",
+      "🔴🔴🔴🔴🔴🔵🔵🔵\n",
+      "🔵🔵🔵🔵🔵🔵🔵🔵\n",
+      "🔵🔵🔵🔵🔵🔵🔵🔵\n",
+      "🟠🟠🟠🟠🔵🔵🔵🔵\n",
+      "🟠🟠🟠🟠🟠🟠🟠🟠\n",
+      "🟡🟡🟠🟠🟠🟠🟠🟠\n",
+      "🟡\n",
+      "\n",
+      "🔴 = First color; 🔵 = Second ; 🟠 = Third; 🟡 = Fourth\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import piltdown.waffle as wfl\n",
     "import piltdown.literals as lit\n",
@@ -855,9 +882,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a 𝐯𝐞𝐫𝐲 \"𝐢𝐦𝐩𝐨𝐫𝐭𝐚𝐧𝐭\" 𝐭𝐡𝐢𝐧𝐠 𝐭𝐨 𝐬𝐚𝐲!\n"
+     ]
+    }
+   ],
    "source": [
     "import piltdown.util as util\n",
     "\n",
@@ -882,9 +917,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ｗｉｔｔｙ　ｅｘａｍｐｌｅ　ｔｅｘｔ．\n"
+     ]
+    }
+   ],
    "source": [
     "import piltdown.util as util\n",
     "\n",
@@ -909,9 +952,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "𝙵𝚘𝚘𝚋𝚊𝚛\n"
+     ]
+    }
+   ],
    "source": [
     "import piltdown.util as util\n",
     "\n",
@@ -942,9 +993,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is short enough to be a tweet!\n",
+      "String too long to post on Twitter\n"
+     ]
+    }
+   ],
    "source": [
     "import piltdown.util as util\n",
     "\n",
