Update README for PyPi install

--- a/README.ipynb
+++ b/README.ipynb
@@ -116,15 +116,23 @@
     "\n",
     "## Installation\n",
     "\n",
+    "### Option 1\n",
+    "\n",
+    "> pip3 install piltdown\n",
+    "\n",
+    "or your local equivalent (eg. `pip3 install piltdown` )\n",
+    "\n",
+    "### Option 2\n",
+    "\n",
     "Clone the repository, `cd` to your new `piltdown` directory, and then do --\n",
     "\n",
-    "    pip install .\n",
-    "    \n",
-    "or the local equivalent (eg. `pip3 install .` )\n",
+    "> pip install .\n",
     "\n",
-    "Or at some point maybe I will make it installable from PyPi or whatever it's called.\n",
+    "or your local equivalent.\n",
     "\n",
-    "Or you can just, like, load up the files any old way you want. It's pretty simple.\n",
+    "### Option 3\n",
+    "\n",
+    "Just, like, load up the files any old way you want. It's pretty simple.\n",
     "\n",
     "Anyway, if you do the pip thing, then import things as you need them as per the examples in, you guessed it, the Documentation section below.\n"
    ]
@@ -1093,7 +1101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
